--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8",
+    "vanta": "^0.5.24",
     "yup": "^1.3.3"
   },
   "devDependencies": {
